--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "release": "standard-version --no-verify",
+    "build": "rm -rf dist && tsc"
   },
   "repository": {
     "type": "git",
