--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-router-events",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A router events alternative for Next.js 13+ with app directory with the ability to prevent user navigation.",
   "author": "run4w4y <add4che@gmail.com>",
   "main": "dist/index.js",
@@ -24,10 +24,10 @@
     "router events",
     "navigation"
   ],
-  "dependencies": {
-    "next": "^13.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "peerDependencies": {
+    "next": "^13 || ^14 || ^15",
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
   },
   "devDependencies": {
     "@types/react": "18.2.20",
